--- a/client/templates/welcome.html
+++ b/client/templates/welcome.html
@@ -6,16 +6,16 @@
 
             <img src="css/img/logo.svg" style="width:65%; margin:0 auto;display: block;"/>
 
-            <h2 style="margin-top: 2px;">bite sized</h2>
-            <h2>chocolate</h2>
-            <h2>confections</h2>
+            <h2 style="margin-top: 2px;">Receitas</h2>
+            <h2>Promoções</h2>
+            <h2>Revendas</h2>
 
             <div class="bottom">
                 <a class="button button-stable" ui-sref="app.signup" style="max-width:84%;color:#73404C;padding-left:28px;padding-right:28px;">
-                    Sign Up to nab some nibs
+                    Cadastre-se
                 </a>
                 <a class="button button-block button-clear" ui-sref="app.login">
-                    Already a Nibbler?&nbsp;&nbsp;Log In&nbsp;<i class="icon-arrow-right"></i>
+                    Ja possui cadastro?&nbsp;&nbsp;Entrar&nbsp;<i class="icon-arrow-right"></i>
                 </a>
             </div>
 
