--- a/client/css/app.css
+++ b/client/css/app.css
@@ -251,29 +251,29 @@ a {
 }
 
 .bar-status {
-    border-color: #73732E;
-    background-color: #73732E;
+    border-color: #043061;
+    background-color: #043061;
     background-image: none;
     color: #fff;
 }
 
 .bar-status1 {
-    border-color: #73732E;
-    background-color: #73732E;
+    border-color: #043061;
+    background-color: #043061;
     background-image: none;
     color: #fff;
 }
 
 .bar-status2 {
-    border-color: #A87E21;
-    background-color: #A87E21;
+    border-color: #2168B4;
+    background-color: #2168B4;
     background-image: none;
     color: #fff;
 }
 
 .bar-status3 {
-    border-color: #802E13;
-    background-color: #802E13;
+    border-color: #1D2A4B;
+    background-color: #1D2A4B;
     background-image: none;
     color: #fff;
 }
@@ -281,8 +281,8 @@ a {
 
 .button-status,
 {
-    border-color: #73732E;
-    background-color: #73732E;
+    border-color: #043061;
+    background-color: #043061;
     background-image: none;
     color: #fff;
 }
@@ -290,15 +290,15 @@ a {
 .button-status1,
 .button-status1:hover,
 .button-status1:active {
-    background-color: #73732E;
+    background-color: #043061;
     color: #fff;
 }
 
 .button-status2,
 .button-status2:hover,
 .button-status2:active {
-    border-color: #A87E21;
-    background-color: #A87E21;
+    border-color: #2168B4;
+    background-color: #2168B4;
     background-image: none;
     color: #fff;
 }
@@ -306,8 +306,8 @@ a {
 .button-status3,
 .button-status3:hover,
 .button-status3:active {
-    border-color: #802E13;
-    background-color: #802E13;
+    border-color: #1D2A4B;
+    background-color: #1D2A4B;
     background-image: none;
     color: #fff;
 }
@@ -355,18 +355,18 @@ a {
 }
 
 .status-bar>div:nth-of-type(1) {
-    border-top: solid 2px #73732E;
+    border-top: solid 2px #043061;
     color: #73732E !important;
 }
 
 .status-bar>div:nth-of-type(2) {
-    border-top: solid 2px #A87E21;
+    border-top: solid 2px #2168B4;
     color: #A87E21 !important;
     text-align: center;
 }
 
 .status-bar>div:nth-of-type(3) {
-    border-top: solid 2px #802E13;
+    border-top: solid 2px #1D2A4B;
     color: #802E13 !important;
     text-align: right;
 }
@@ -387,27 +387,27 @@ a {
 }
 
 .status1-bg {
-    background: #73732E;
+    background: #043061;
 }
 
 .status2-bg {
-    background: #A87E21;
+    background: #2168B4;
 }
 
 .status3-bg {
-    background: #802E13;
+    background: #1D2A4B;
 }
 
 .status1 {
-    color: #73732E;
+    color: #043061;
 }
 
 .status2 {
-    color: #A87E21;
+    color: #2168B4;
 }
 
 .status3 {
-    color: #802E13;
+    color: #1D2A4B;
 }
 
 .icon-status1 {
