--- a/client/css/app.css
+++ b/client/css/app.css
@@ -229,7 +229,7 @@ a {
 
 .profile .block h3 {
     font-family: "Source Sans Light" !important;
-    color: #805959 !important;
+    color: #6FAAEC !important;
     margin: 8px;
     font-size: 20px;
 }
