--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -28,12 +28,12 @@
 
                 <ion-item nav-clear menu-close ui-sref="app.wallet" class="item-icon-left">
                     <i class="icon ion-ios7-bookmarks"></i>
-                    Meus descontons
+                    Meus descontos
                 </ion-item>
 
                 <ion-item nav-clear menu-close ui-sref="app.wishlist" class="item-icon-left">
                     <i class="icon ion-heart"></i>
-                    Wish List
+                    Meus Resgates
                 </ion-item>
 
                 <ion-item nav-clear menu-close ui-sref="app.activity" class="item-icon-left">
