--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -8,26 +8,26 @@
                 <input type="email" placeholder="Email" ng-model="user.email">
             </label>
             <label class="item item-input">
-                <input type="text" placeholder="First Name" ng-model="user.firstName">
+                <input type="text" placeholder="Nome" ng-model="user.firstName">
             </label>
             <label class="item item-input">
-                <input type="text" placeholder="Last Name" ng-model="user.lastName">
+                <input type="text" placeholder="Sobrenome" ng-model="user.lastName">
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Password" ng-model="user.password">
+                <input type="password" placeholder="Senha" ng-model="user.password">
             </label>
             <label class="item item-input">
-                <input type="password" placeholder="Re-enter password" ng-model="user.password2">
+                <input type="password" placeholder="Confirme senha" ng-model="user.password2">
             </label>
 
             <button class="button button-block button-stable" ng-click="signup()">
-                Sign Up
+                Cadastrar
             </button>
 
             <div style="text-align: center; margin: 25px 0;">or</div>
 
             <button class="button button-block button-positive" style="background: #3b5998" ng-click="facebookLogin()">
-                Login with Facebook
+                Entrar com facebook
             </button>
 
         </div>
