--- a/client/templates/signup.html
+++ b/client/templates/signup.html
@@ -24,7 +24,7 @@
                 Cadastrar
             </button>
 
-            <div style="text-align: center; margin: 25px 0;">or</div>
+            <div style="text-align: center; margin: 25px 0;">ou</div>
 
             <button class="button button-block button-positive" style="background: #3b5998" ng-click="facebookLogin()">
                 Entrar com facebook
