--- a/client/templates/store-locator.html
+++ b/client/templates/store-locator.html
@@ -15,10 +15,10 @@
 
     <ul class="list">
         <div class="item item-divider">
-            Store Locations
+            Revendas
         </div>
-        <li class="item" ng-repeat="store in stores" ng-click="showLocation([store.latitude, store.longitude])">
-            {{store.name}}
+        <li class="item" ng-repeat="store in stores" ng-click="showLocation([-23.560735, -46.642610])">
+           Ultragaz
         </li>
     </ul>
 
