--- a/client/templates/offer-detail.html
+++ b/client/templates/offer-detail.html
@@ -1,11 +1,11 @@
-<ion-view title="Offer Details" class="card-bg">
+<ion-view title="Promoção" class="card-bg">
 
   <ion-content has-header="true" padding="true">
 
       <div class="list card">
           <div class="item">
               <h2>{{offer.name}}</h2>
-              <p>Expires on {{offer.enddate | date:'EEEE, MMMM d y'}}</p>
+              <p>Expira em {{offer.enddate | date:'EEEE, MMMM d y'}}</p>
           </div>
           <div class="item item-body">
               <img class="full-image" ng-if="offer.image"  ng-src="{{offer.image}}">
@@ -13,10 +13,10 @@
 
               <div class="button-bar">
                   <a class="button button-block button-light" style="font-size: .9rem;" ng-click="redeem()">
-                      Redeem
+                      Resgatar
                   </a>
                   <a class="button button-block button-light"  style="font-size: .9rem;" ng-click="saveToWallet()">
-                      Save to Wallet
+                      Salvar na carteira
                   </a>
               </div>
           </div>
