--- a/client/templates/menu.html
+++ b/client/templates/menu.html
@@ -23,12 +23,12 @@
 
                 <ion-item nav-clear menu-close ui-sref="app.products" class="item-icon-left">
                     <i class="icon icon-chocolate-square"></i>
-                    Receitas
+                    Produtos
                 </ion-item>
 
                 <ion-item nav-clear menu-close ui-sref="app.wallet" class="item-icon-left">
                     <i class="icon ion-ios7-bookmarks"></i>
-                    Meus descontos
+                    Minha carteira
                 </ion-item>
 
                 <ion-item nav-clear menu-close ui-sref="app.wishlist" class="item-icon-left">
@@ -43,7 +43,7 @@
 
                 <ion-item nav-clear menu-close ui-sref="app.gallery" class="item-icon-left">
                     <i class="icon ion-camera"></i>
-                    Galeria
+                    Receitas
                 </ion-item>
 
                 <ion-item nav-clear menu-close ui-sref="app.store-locator" class="item-icon-left">
