--- a/client/templates/profile.html
+++ b/client/templates/profile.html
@@ -13,14 +13,14 @@
             <div class="header status{{user.status}}-bg">
                 <img class="avatar" ng-src="{{user.pictureurl || 'img/avatar.jpg'}}" ng-click="popupDialog()"/>
                 <h2>{{user.firstname}} {{user.lastname}}</h2>
-                <h3>Member since {{user.createddate | date:'longDate'}}</h3>
+                <h3>Cliente desde {{user.createddate | date:'longDate'}}</h3>
             </div>
 
             <div style="padding: 8px 16px;" class="status{{user.status}}">
 
                 <div class="profile-status">
                     <div>
-                        <div class="profile-level">{{statusLabel}} Member</div>
+                        <div class="profile-level">{{statusLabel}} </div>
                         <div class="profile-points"><img ng-src="css/img/icon-points{{user.status}}.svg" style="height: 1.2rem;width: 1.2rem;"/> {{user.points || 0}} Nibs</div>
                         <p>{{statusDescription}}</p>
                     </div>
@@ -29,16 +29,16 @@
 
                 <div class="status-bar">
                     <div class="forastero">
-                        <p>Forastero</p>
-                        <p>0-5000 Nibs</p>
+                        <p>Super</p>
+                        <p>0-5000 Pontos</p>
                     </div>
                     <div class="trinitario">
-                        <p>Trinitario</p>
-                        <p>&gt;5000 Nibs</p>
+                        <p>Ultra</p>
+                        <p>&gt;5000 Pontos</p>
                     </div>
                     <div class="Criollo">
-                        <p>Criollo</p>
-                        <p>&gt;10000 Nibs</p>
+                        <p>VIP</p>
+                        <p>&gt;10000 Pontos</p>
                     </div>
                 </div>
 
